# TriadLLM

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  run_triadllm.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALLATION.md  PROVIDERS.md  PUBLIC_REPO_CHECKLIST.md  RELEASING.md  TROUBLESHOOTING.md
src/multibrainllm/: __init__.py  __main__.py  app.py  cli.py  config.py  domain.py  i18n.py  logging_utils.py  prompts.py  providers.py  runtime.py  tools.py
src/multibrainllm/examples/: profiles.yaml
src/multibrainllm/locales/: en.json  es.json
src/triadllm/: __init__.py  __main__.py  app.py  cli.py  config.py  domain.py  i18n.py  logging_utils.py  prompts.py  providers.py  runtime.py  tools.py
src/triadllm/examples/: profiles.yaml  settings.json
src/triadllm/locales/: en.json  es.json
tests/: test_app.py  test_config.py  test_domain.py  test_i18n.py  test_prompts.py  test_providers.py  test_runtime.py
