[project]
name = "multibrainllm"
version = "0.1.0"
description = "Multi-agent terminal UI for OpenAI-compatible LLMs."
readme = "README.md"
authors = [
    { name = "David R. Lopez B", email = "ibitato@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "mistralai>=1.12.4",
    "openai>=2.26.0",
    "platformdirs>=4.9.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "textual>=8.0.2",
]

[project.scripts]
multibrain = "multibrainllm:main"
multibrainllm = "multibrainllm:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
